--- a/force-app/main/default/classes/AppController.cls
+++ b/force-app/main/default/classes/AppController.cls
@@ -1,6 +1,6 @@
 public class AppController {
     
-    public String getStep(){
-        return 'Step 1';
+    public Integer getStep(){
+        return null;
     }
 }
