--- a/force-app/main/default/classes/StaticResourceClass.cls
+++ b/force-app/main/default/classes/StaticResourceClass.cls
@@ -2,9 +2,10 @@ public class StaticResourceClass {
 
 	@AuraEnabled(cacheable=true)
 	public static Map<String, Object> getStaticData (String stepContent, String apexService) {
-		Type customType = Type.forName(apexService);
-		E2EContactDetails service = (E2EContactDetails)customType.newInstance();
-		Map<String, Object> contentsMap = service.getContent(stepContent, null);
-		return contentsMap;
+		// Type customType = Type.forName(apexService);
+		// E2EContactDetails service = (E2EContactDetails)customType.newInstance();
+		// service.setContent(stepContent, null);
+		// Map<String, Object> contentsMap = service.getContent();
+		return null;
 	}
 }
